Update hero dan about

--- a/index.html
+++ b/index.html
@@ -20,13 +20,17 @@
   </section>
 
   <!-- ABOUT -->
-  <section class="max-w-3xl mx-auto py-16 px-6">
-    <h2 class="text-3xl font-bold mb-4 text-center">Tentang Gue</h2>
-    <p class="text-lg text-gray-700 text-center">
-      Gue adalah developer yang fokus bikin landing page modern, cepat, dan siap jual.
-      Suka ngulik desain, bikin website responsif, dan bantu orang lain masuk dunia digital.
-    </p>
-  </section>
+<section class="max-w-3xl mx-auto py-16 px-6">
+  <h2 class="text-3xl font-bold mb-4 text-center">Tentang Gue</h2>
+  <p class="text-lg text-gray-700 text-center leading-relaxed">
+    Nama gue <span class="font-semibold">Mohammad Saif Al-Islam</span>, mahasiswa Teknik Informatika di Universitas Mercu Buana.
+    Gue mulai belajar web development ketika masuk kuliah, karena selama di pesantren gue lebih fokus ke tahfidz dan tahsin,
+    dan akses ke perangkat elektronik sangat terbatas.
+    <br><br>
+    Sekarang, gue lagi ngejar ketertinggalan itu. Pelan-pelan gue belajar HTML, CSS, Tailwind, GitHub Pages, dan mulai bikin
+    landing page pertama gue. Perjalanan gue masih panjang, tapi setiap hari gue berkembang sedikit demi sedikit.
+  </p>
+</section>
 
   <!-- SKILLS -->
   <section class="bg-white py-16">
@@ -72,14 +76,17 @@
     </div>
   </section>
 
-  <!-- CONTACT -->
-  <section class="py-16 bg-blue-600 text-white text-center">
-    <h2 class="text-3xl font-bold mb-4">Hubungi Gue</h2>
-    <p class="mb-6">Siap bantu bikin website keren buat kebutuhan lo.</p>
-    <a href="mailto:emailkamu@gmail.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold shadow hover:bg-gray-200">
-      Kirim Email
-    </a>
-  </section>
+  <!-- HERO -->
+<section class="py-20 text-center bg-white">
+  <img src="foto-lo.jpeg" class="w-32 h-32 rounded-full mx-auto mb-6 shadow-lg object-cover" />
+  <h1 class="text-4xl font-bold mb-2">Mohammad Saif Al-Islam</h1>
+  <p class="text-lg text-gray-600 mb-4">
+    Mahasiswa Teknik Informatika – Universitas Mercu Buana
+  </p>
+  <a href="#projects" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold shadow hover:bg-blue-700">
+    Lihat Project
+  </a>
+</section>
 
   <!-- FOOTER -->
   <footer class="text-center py-6 bg-gray-200">
