Update hero pakai foto baru

--- a/index.html
+++ b/index.html
@@ -3,95 +3,170 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio Gue</title>
+  <title>Portofolio Mohammad Saif Al-Islam</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-100 text-gray-800">
 
   <!-- HERO -->
-  <section class="py-20 text-center bg-white">
-    <img src="https://via.placeholder.com/150" class="w-32 h-32 rounded-full mx-auto mb-6 shadow" />
-    <h1 class="text-4xl font-bold mb-2">Nama Lo</h1>
-    <p class="text-lg text-gray-600 mb-4">Web Developer • UI Designer • Digital Creator</p>
-    <a href="#projects" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold shadow hover:bg-blue-700">
-      Lihat Project
-    </a>
+  <section class="py-20 bg-white">
+    <div class="max-w-4xl mx-auto px-6 flex flex-col md:flex-row items-center gap-10">
+      
+      <!-- FOTO -->
+      <div class="flex-shrink-0">
+        <div class="w-40 h-40 md:w-48 md:h-48 rounded-2xl overflow-hidden shadow-xl border-4 border-blue-500/60">
+          <img
+            src="hero-saif.jpg"
+            alt="Foto Mohammad Saif Al-Islam"
+            class="w-full h-full object-cover"
+          />
+        </div>
+      </div>
+
+      <!-- TEKS -->
+      <div class="text-center md:text-left">
+        <h1 class="text-3xl md:text-4xl font-bold mb-2">
+          Mohammad Saif Al-Islam
+        </h1>
+        <p class="text-base md:text-lg text-gray-600 mb-4">
+          Mahasiswa Teknik Informatika – Universitas Mercu Buana
+        </p>
+        <p class="text-gray-700 mb-6">
+          Gue mulai belajar web development ketika masuk kuliah, setelah sebelumnya fokus di tahfidz dan tahsin saat di pesantren.
+          Sekarang gue lagi ngejar ketertinggalan, pelan-pelan belajar bikin website modern dan responsif.
+        </p>
+        <a
+          href="#projects"
+          class="inline-block bg-blue-600 text-white px-6 py-3 rounded-full font-semibold shadow hover:bg-blue-700 transition"
+        >
+          Lihat Project
+        </a>
+      </div>
+
+    </div>
   </section>
 
   <!-- ABOUT -->
-<section class="max-w-3xl mx-auto py-16 px-6">
-  <h2 class="text-3xl font-bold mb-4 text-center">Tentang Gue</h2>
-  <p class="text-lg text-gray-700 text-center leading-relaxed">
-    Nama gue <span class="font-semibold">Mohammad Saif Al-Islam</span>, mahasiswa Teknik Informatika di Universitas Mercu Buana.
-    Gue mulai belajar web development ketika masuk kuliah, karena selama di pesantren gue lebih fokus ke tahfidz dan tahsin,
-    dan akses ke perangkat elektronik sangat terbatas.
-    <br><br>
-    Sekarang, gue lagi ngejar ketertinggalan itu. Pelan-pelan gue belajar HTML, CSS, Tailwind, GitHub Pages, dan mulai bikin
-    landing page pertama gue. Perjalanan gue masih panjang, tapi setiap hari gue berkembang sedikit demi sedikit.
-  </p>
-</section>
+  <section class="max-w-3xl mx-auto py-16 px-6">
+    <h2 class="text-3xl font-bold mb-4 text-center">Tentang Gue</h2>
+    <p class="text-lg text-gray-700 text-center leading-relaxed">
+      Nama gue <span class="font-semibold">Mohammad Saif Al-Islam</span>, mahasiswa Teknik Informatika di Universitas Mercu Buana.
+      Gue mulai belajar web development ketika masuk kuliah, karena selama di pesantren gue lebih fokus ke tahfidz dan tahsin,
+      dan akses ke perangkat elektronik sangat terbatas.
+      <br><br>
+      Sekarang, gue lagi ngejar ketertinggalan itu. Pelan-pelan gue belajar HTML, CSS, Tailwind, GitHub Pages, dan mulai bikin
+      landing page pertama gue. Perjalanan gue masih panjang, tapi setiap hari gue berkembang sedikit demi sedikit.
+    </p>
+  </section>
+
+  <!-- TIMELINE -->
+  <section class="max-w-4xl mx-auto py-16 px-6">
+    <h2 class="text-3xl font-bold mb-10 text-center">Perjalanan Gue</h2>
+
+    <div class="space-y-8 border-l-4 border-blue-600 pl-6">
+
+      <div>
+        <h3 class="text-xl font-semibold">2017 – 2023</h3>
+        <p class="text-gray-700">Belajar di pesantren, fokus di tahfidz dan tahsin. Akses ke teknologi terbatas, tapi mental disiplin kebentuk di sini.</p>
+      </div>
+
+      <div>
+        <h3 class="text-xl font-semibold">2024</h3>
+        <p class="text-gray-700">Masuk Teknik Informatika Universitas Mercu Buana. Mulai kenal dunia teknologi dan web development.</p>
+      </div>
+
+      <div>
+        <h3 class="text-xl font-semibold">2024 – Sekarang</h3>
+        <p class="text-gray-700">Belajar HTML, CSS, Tailwind, GitHub Pages, dan bikin landing page pertama. Pelan-pelan ngejar ketertinggalan.</p>
+      </div>
+
+    </div>
+  </section>
 
   <!-- SKILLS -->
-  <section class="bg-white py-16">
-    <h2 class="text-3xl font-bold text-center mb-10">Skill Utama</h2>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-4xl mx-auto px-6">
-      <div class="p-6 bg-gray-100 rounded-xl shadow text-center">
-        <h3 class="text-xl font-semibold mb-2">HTML & CSS</h3>
-        <p>Bangun struktur dan styling website dari nol.</p>
+  <section class="py-16 bg-gray-100">
+    <h2 class="text-3xl font-bold text-center mb-10">Skill yang Lagi Gue Kuasai</h2>
+
+    <div class="max-w-5xl mx-auto grid md:grid-cols-3 gap-6 px-6">
+
+      <div class="bg-white p-6 rounded-xl shadow text-center">
+        <h3 class="font-semibold text-xl mb-2">HTML</h3>
+        <p class="text-gray-600">Dasar struktur website, fondasi utama gue belajar web dev.</p>
       </div>
-      <div class="p-6 bg-gray-100 rounded-xl shadow text-center">
-        <h3 class="text-xl font-semibold mb-2">Tailwind CSS</h3>
-        <p>Bikin UI modern dengan cepat dan rapi.</p>
+
+      <div class="bg-white p-6 rounded-xl shadow text-center">
+        <h3 class="font-semibold text-xl mb-2">Tailwind CSS</h3>
+        <p class="text-gray-600">Bikin tampilan modern, cepat, dan responsif.</p>
       </div>
-      <div class="p-6 bg-gray-100 rounded-xl shadow text-center">
-        <h3 class="text-xl font-semibold mb-2">Landing Page</h3>
-        <p>Optimasi tampilan buat jualan & portfolio.</p>
+
+      <div class="bg-white p-6 rounded-xl shadow text-center">
+        <h3 class="font-semibold text-xl mb-2">GitHub Pages</h3>
+        <p class="text-gray-600">Deploy website statis dengan mudah dan gratis.</p>
       </div>
+
     </div>
   </section>
 
   <!-- PROJECTS -->
-  <section id="projects" class="py-16 max-w-5xl mx-auto px-6">
-    <h2 class="text-3xl font-bold text-center mb-10">Project Terbaru</h2>
+  <section id="projects" class="py-16">
+    <h2 class="text-3xl font-bold text-center mb-10">Project Gue</h2>
 
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-white p-4 rounded-xl shadow">
-        <div class="h-40 bg-gray-200 rounded mb-4"></div>
-        <h3 class="text-xl font-semibold mb-2">Landing Page 1</h3>
-        <p class="text-gray-600">Landing page modern untuk jualan digital.</p>
+    <div class="max-w-5xl mx-auto grid md:grid-cols-3 gap-8 px-6">
+
+      <a href="https://sayf-cell.github.io/landing-page-pertama/" target="_blank" class="block bg-white p-5 rounded-xl shadow hover:shadow-lg transition">
+        <h3 class="text-xl font-semibold mb-2">Landing Page Pertama</h3>
+        <p class="text-gray-600">Project pertama gue pakai Tailwind CSS.</p>
+      </a>
+
+      <div class="bg-white p-5 rounded-xl shadow text-gray-400">
+        <h3 class="text-xl font-semibold mb-2">Project 2</h3>
+        <p>Coming soon...</p>
       </div>
 
-      <div class="bg-white p-4 rounded-xl shadow">
-        <div class="h-40 bg-gray-200 rounded mb-4"></div>
-        <h3 class="text-xl font-semibold mb-2">Portfolio Website</h3>
-        <p class="text-gray-600">Website personal untuk branding profesional.</p>
+      <div class="bg-white p-5 rounded-xl shadow text-gray-400">
+        <h3 class="text-xl font-semibold mb-2">Project 3</h3>
+        <p>Coming soon...</p>
       </div>
 
-      <div class="bg-white p-4 rounded-xl shadow">
-        <div class="h-40 bg-gray-200 rounded mb-4"></div>
-        <h3 class="text-xl font-semibold mb-2">PKM Digital</h3>
-        <p class="text-gray-600">Website edukasi digital literacy & anti-hoaks.</p>
-      </div>
     </div>
   </section>
 
-  <!-- HERO -->
-<section class="py-20 text-center bg-white">
-  <img src="foto-lo.jpeg" class="w-32 h-32 rounded-full mx-auto mb-6 shadow-lg object-cover" />
-  <h1 class="text-4xl font-bold mb-2">Mohammad Saif Al-Islam</h1>
-  <p class="text-lg text-gray-600 mb-4">
-    Mahasiswa Teknik Informatika – Universitas Mercu Buana
-  </p>
-  <a href="#projects" class="bg-blue-600 text-white px-6 py-3 rounded-full font-semibold shadow hover:bg-blue-700">
-    Lihat Project
-  </a>
-</section>
+  <!-- CONTACT -->
+  <section class="py-16 bg-blue-600 text-white text-center">
+    <h2 class="text-3xl font-bold mb-4">Hubungi Gue</h2>
+    <p class="mb-6">Kalau mau ngobrol soal project atau belajar bareng, langsung email aja.</p>
+
+    <a href="mailto:emailkamu@gmail.com" class="bg-white text-blue-600 px-6 py-3 rounded-full font-semibold shadow hover:bg-gray-200 transition">
+      Kirim Email
+    </a>
+  </section>
 
   <!-- FOOTER -->
-  <footer class="text-center py-6 bg-gray-200">
-    <p>© 2025 Portofolio by Lo</p>
+  <footer class="text-center py-6 bg-gray-200 mt-8">
+    <p>© 2025 Mohammad Saif Al-Islam</p>
   </footer>
+
+  <!-- ANIMASI -->
+  <script>
+    const elements = document.querySelectorAll("section, .shadow");
+
+    elements.forEach((el) => {
+      el.style.opacity = 0;
+      el.style.transform = "translateY(20px)";
+      el.style.transition = "all 0.7s ease";
+    });
+
+    window.addEventListener("scroll", () => {
+      elements.forEach((el) => {
+        const rect = el.getBoundingClientRect().top;
+        if (rect < window.innerHeight - 100) {
+          el.style.opacity = 1;
+          el.style.transform = "translateY(0)";
+        }
+      });
+    });
+  </script>
 
 </body>
 </html>
