--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="flex-shrink-0">
         <div class="w-40 h-40 md:w-48 md:h-48 rounded-2xl overflow-hidden shadow-xl border-4 border-blue-500/60">
           <img
-            src="hero-saif.jpg"
+            src="hero-saif.JPG"
             alt="Foto Mohammad Saif Al-Islam"
             class="w-full h-full object-cover"
           />
