fix: save index.html + TikTok button

--- a/index.html
+++ b/index.html
@@ -115,9 +115,39 @@
   </section>
 
   <!-- CONTACT -->
-  <section class="py-16 bg-blue-600 text-white text-center">
-    <h2 class="text-3xl font-bold mb-4">Hubungi Gue</h2>
-    <p class="mb-6">Kalau mau ngobrol soal project atau belajar bareng, langsung hubungi aja.</p>
-    <div class="flex flex-col md:flex-row justify-center gap-4 flex-wrap">
-      <a href="mailto:sayfelhafez@gmail.com" class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition bg-white text-blue-600 shadow-lg hover:scale-105 hover:-translate-y-1 duration-300">Email</a>
-      <a href="https://wa.me/6282125427877" class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition bg-green-500 text-white shadow-lg hover:scale-105 hover:-translate-y
+<section class="py-16 bg-blue-600 text-white text-center">
+  <h2 class="text-3xl font-bold mb-4">Hubungi Gue</h2>
+  <p class="mb-6">Kalau mau ngobrol soal project atau belajar bareng, langsung hubungi aja.</p>
+
+  <div class="flex flex-col md:flex-row justify-center gap-4 flex-wrap">
+
+    <!-- EMAIL -->
+    <a href="mailto:sayfelhafez@gmail.com"
+      class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition
+             bg-white text-blue-600 shadow-lg hover:scale-105 hover:-translate-y-1 duration-300">
+      Email
+    </a>
+
+    <!-- WHATSAPP -->
+    <a href="https://wa.me/6282125427877"
+      class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition
+             bg-green-500 text-white shadow-lg hover:scale-105 hover:-translate-y-1 duration-300">
+      WhatsApp
+    </a>
+
+    <!-- INSTAGRAM -->
+    <a href="https://instagram.com/muh.sayf"
+      class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition
+             bg-pink-500 text-white shadow-lg hover:scale-105 hover:-translate-y-1 duration-300">
+      Instagram
+    </a>
+
+    <!-- TIKTOK -->
+    <a href="https://www.tiktok.com/@muh_sayf"
+      class="flex items-center gap-2 px-6 py-3 rounded-full font-semibold transition
+             bg-black text-white shadow-lg hover:scale-105 hover:-translate-y-1 duration-300">
+      TikTok
+    </a>
+
+  </div>
+</section>
